problema css ajeitado

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <li>Ver questão da responsividade</li>
           <li>Atualizações</li>
           <li>Livro de visitas</li>
+          <li>Espiritualidade</li>
         </ul>
       </section>
 
