--- a/html/do-que-sou-feito.html
+++ b/html/do-que-sou-feito.html
@@ -6,7 +6,7 @@
         
         <link href="../css/style.css" rel="stylesheet" type="text/css">
         <link href="../css/do-que-sou-feito.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="css/grid-template-1.css" type="text/css">
+        <link rel="stylesheet" href="../css/grid-template-1.css" type="text/css">
         
     </head>
   <body>
