--- a/html/do-que-sou-feito.html
+++ b/html/do-que-sou-feito.html
@@ -6,20 +6,15 @@
         
         <link href="../css/style.css" rel="stylesheet" type="text/css">
         <link href="../css/do-que-sou-feito.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="../css/grid-template-1.css" type="text/css">
+        <link rel="stylesheet" href="../css/grid-template-2.css" type="text/css">
         
     </head>
   <body>
 
     <main>
 
-      <section class="item logo">
-
-        <p>logo</p>
-      </section>
-
       <nav class="item nav">
-        <p>logo</p>
+        <p>Do que eu sou feito?</p>
       </nav>
 
       <nav class="item sidenav">
