adicionei site das musicas da minha infância

--- a/html/do-que-sou-feito.html
+++ b/html/do-que-sou-feito.html
@@ -18,15 +18,47 @@
       </nav>
 
       <nav class="item sidenav">
-        <p>logo</p>
+      
+        <ul>
+          <li><a href="../index.html">Início</a></li>
+          <li><a href="./do-que-sou-feito.html">Do que eu sou feito?</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Livro de pesquisas</a></li>
+        </ul>
       </nav>
 
       <section class="item content">
-        <p>logo</p>
+
+        <img class="caixa-pessoa" src="../images/caixa-pessoa.png">
+        <p class="little-text"><a href="https://picrew.me/en/">feito com: picrew.me</a></p>
+
+        <p class="titulo">Fuji</p>
+        <p>20 aninhos, nipo-brasileiro, nordestino<br/></p>
+        <p class="justify">
+          Minha alma é feita de arte, minha carne veio da terra e minha voz da mãe natureza. Somos todos um com a terra e com o céu.<br/><br/>
+        </p >
+
+        <p class="justify outra-fonte">Prazer! Me chamo Fuji, sou autista e TDAH, e algumas letrinhas do LGBTQIAPN+. Estou cursando graduação em Pedagogia e sou técnico de informática de nível médio. Amo criar coisas, e sites são uma delas, vejo como um tipo de arte pra mim, que permite que eu me expresse de forma criativa.</p>
+
+        <div class="div-img">
+          <img class="img-aleatoria" src="../images/brasil.png">
+          <img class="img-aleatoria" src="../images/meio-do-mundo.png">
+          <img class="img-aleatoria" src="../images/unfinished-project-meme.jpg">
+          <img class="img-aleatoria" src="../images/attention-span-meme.jpg">
+          <img class="img-aleatoria" src="../images/wolves-sitting-on-a-tree-sergei-pankejeff-1964.jpg">
+        </div>
+        
+
+
       </section>
 
       <section class="item advert">
-        <p>logo</p>
+        <ul>
+          <li><a href="https://fujiwara-haruki.github.io/musicas/">Músicas da minha infância</a></li>
+          <li><a href="">...</a></li>
+          <li><a href="">...</a></li>
+          <li><a href="">...</a></li>
+        </ul>
       </section>
 
       <footer class="item footer">
