--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="item content">
         <p class="titulo2">Não se aproxime! As coisas começam a ficar muito estranhas a partir daqui</p>
     
-        AJEITAR PROBLEMA DE CSS NA PAGINA SOBRE MIM
+        <p class="paragrafo">Criei esse site com o objetivo de me afastar das redes sociais, algorítimos, e criar um cantinho com minha cara, meus gostos e tentar criar um hábito mais saudável com a internet.</p>
 
       </section>
 
